docs: sync READMEs with current feature set
Catch the docs up to the code: precise taint scanning (taint-engine
module, scan/taint/precise API, config, prerequisites), full 18-tool MCP
table, taint/metrics/export REST endpoints and CLI commands, Markdown
document indexing, and roadmap phase-2 completions. Fix stale jar version
(0.1.0-SNAPSHOT -> 0.5.0), drop --enable-preview, align JDK requirements.

Also: add 项目定位/Positioning section to both root READMEs; add
repograph-taint-engine/README.md declaring the module experimental and
documenting the subprocess contract and runtime constraints; rename
README.zh.md to README.en.md (it is the English version); use
vendor-neutral MCP client wording and neutralize legacy naming in
taint-engine strings; fix stale doc pointers in Javadoc.