@@ -1,6 +1,6 @@
 <div align="right">
 
-[English](README.zh.md)
+[English](README.en.md)
 
 </div>
 
@@ -19,15 +19,28 @@
 
 本地代码知识图谱与语义分析工具，面向静态启发式代码分析。
 
-- **语义检索**：用自然语言描述查找代码
+- **语义检索**：用自然语言描述查找代码，Markdown 文档同样参与检索
 - **代码相似检索**：通过代码片段找到相似实现
 - **调用链分析**：查询调用者、被调用者与影响面
 - **继承图分析**：查找子类与接口实现
+- **污点分析**：源码级跨过程污点追踪 + WALA IFDS 字节码级精确污点（独立引擎）
+- **漏洞管理**：代码规则 / 依赖 CVE / 污点扫描三路互补，状态机管理发现记录
+- **代码质量**：圈复杂度、耦合、包循环、Git 热点与健康报告
 - **SBOM 提取**：自动识别 Maven / Gradle / npm / pip，生成 CycloneDX JSON
 
-**技术栈**：Java 22+，Spring Boot 3.x，Gradle（Kotlin DSL）  
-**解析语言**：Java / C / Python  
+**技术栈**：Java 25（app）+ Java 21（精确污点引擎），Spring Boot 3.x，Gradle（Kotlin DSL）  
+**解析目标**：Java / C / Python 源码 + Markdown 文档 + Java 字节码（可选）  
 **存储后端**：[Qdrant](https://qdrant.tech/)（向量）、[Neo4j](https://neo4j.com/)（图）、[Ollama](https://ollama.ai/)（Embedding）、SQLite（增量缓存）
+
+---
+
+## 项目定位
+
+RepoGraph 的终极方向是成为 **LLM Agent 的上下文提供者**：让 Agent 在大型代码库中以工具调用方式按需定位上下文，而不是把整个仓库塞进上下文窗口。MCP 工具集 + GraphRAG 检索是核心交付物。
+
+当前阶段以**独立代码审计平台**形态交付——所有分析能力先在平台上（Web 控制台 / REST / CLI）完成开发与验证，再逐步暴露为 MCP 工具（进度见[开发计划](#开发计划)）。
+
+**能力边界**：面向静态启发式分析，不做完整编译器语义分析——粗中粒度对检索与审计够用；需要最高精度的场景由 WALA IFDS 精确污点引擎补位。完全本地运行，代码不出内网。
 
 ---
 
@@ -38,6 +51,7 @@
 | 代码解析 | Java | AST 解析，提取类型、方法、字段、注解与调用边 | `repograph index` / 索引页面 |
 | 代码解析 | C / Python | Tree-sitter 解析；失败时自动降级 | `repograph index` / 索引页面 |
 | 代码解析 | 字节码 | 可选 `.class` 分析 | 索引时指定 `class` 语言 |
+| 代码解析 | Markdown 文档 | 按 H1-H3 标题切分为 DOCUMENT 单元，参与语义检索 | 索引管道自动识别 `.md` |
 | 索引 | 增量索引 | 文件级缓存，仅处理变更文件 | `repograph index` / `POST /api/v1/index/project` |
 | 索引 | 文件监听 | 监听增删改，自动触发增量更新 | `repograph watch` / 项目概览 |
 | 索引 | 多项目管理 | 稳定 ID、隔离存储与统计管理 | 顶部项目选择器 / `repograph projects` |
@@ -55,17 +69,25 @@
 | 流分析 | 数据流摘要 | 参数、字段读写与返回值摘要 | 图谱 → 流分析 |
 | 流分析 | CFG | Java 方法与构造器的控制流图 | 图谱 → 流分析 → CFG |
 | 流分析 | PDG | 数据依赖与控制依赖的组合分析 | 图谱 → 流分析 → PDG |
+| 流分析 | 跨过程污点 | 方法内摘要 + BFS 沿调用图传播，内置 SQL/OS/反序列化等 Sink | `GET /api/v1/flow/taint` |
 | 框架分析 | 入口点识别 | Spring MVC、JAX-RS、MyBatis 注解识别与标记 | 图谱入口点 / 项目工具 |
+| 漏洞 | 代码扫描 | 9 条 CWE 标注静态规则 | `repograph vuln scan-code` / 漏洞面板 |
+| 漏洞 | 污点扫描 | 跨过程污点追踪（HTTP 入口 → Sink，源码级启发式） | `POST /api/v1/vulns/scan/taint` |
+| 漏洞 | 精确污点扫描 | WALA IFDS 字节码级 field-sensitive（独立进程引擎） | `POST /api/v1/vulns/scan/taint/precise` |
+| 漏洞 | 依赖 CVE | 离线 Advisory 数据库 × SBOM 比对 | `repograph vuln scan-deps` / 漏洞面板 |
+| 质量指标 | 复杂度 / 耦合 / 包循环 / 热点 | 圈复杂度、不稳定度、Tarjan SCC 包循环、Git Churn | `repograph complexity` 等 / `GET /api/v1/metrics/*` |
+| 质量指标 | 健康报告 | 漏洞、循环、复杂度等六维度扣分制健康分 | `GET /api/v1/metrics/report` / `get_health_report` |
+| 可视化 | 依赖图导出 | 包级依赖图 → DOT / Mermaid，循环依赖高亮 | `repograph export` / `GET /api/v1/export/graph` |
 | SBOM | Maven | `pom.xml` → CycloneDX JSON（`pkg:maven`） | `repograph sbom` / 项目工具 |
 | SBOM | Gradle | `build.gradle[.kts]` + `libs.versions.toml` → CycloneDX JSON（`pkg:maven`） | `repograph sbom` / 项目工具 |
 | SBOM | npm | `package.json` → CycloneDX JSON（`pkg:npm`），支持 scoped 包 | `repograph sbom` / 项目工具 |
 | SBOM | pip | `pyproject.toml` + `requirements*.txt` → CycloneDX JSON（`pkg:pypi`） | `repograph sbom` / 项目工具 |
 | 可视化 | Web 控制台 | 搜索、代码图、流分析、统计、索引与健康状态 | `http://localhost:8080` |
-| AI 集成 | MCP stdio 服务 | 搜索、符号、调用链、影响面等 MCP 工具 | `repograph-mcp` |
+| AI 集成 | MCP stdio 服务 | 18 个 MCP 工具：搜索 / GraphRAG / 调用链 / 污点 / 漏洞 / 索引管理 | `repograph-mcp` |
 | 质量评测 | 检索 Benchmark | Hit@1/3/5/10、MRR@10、HitScore 及阈值门禁 | Benchmark 页面 / Gradle 测试 |
 | 容错 | 解析降级 | 解析失败自动降级，不阻断整体流程 | 索引管道 |
 
-> 流分析当前仅支持 Java；数据依赖为保守启发式估算，不构建 SSA。
+> 流分析：Java 支持 CFG + PDG + 污点摘要（精确 AST）；C / Python 仅 CFG + 保守数据流摘要。数据依赖为保守启发式估算，不构建 SSA。
 
 ---
 
@@ -109,33 +131,42 @@
 **框架感知，自动识别入口点**  
 识别 Spring MVC、JAX-RS、MyBatis 注解，自动标记入口点。无需手工标注，可直接查询所有端点或 DAO 方法。
 
-**本地漏洞管理，代码 + 依赖全覆盖**  
-9 条 CWE 标注静态规则 + 离线 CVE 数据库（80 条，覆盖主流 Java 依赖）。发现记录走状态机确认流程，结合图遍历输出调用链影响面。完全离线，无需外部扫描服务。
+**本地漏洞管理，规则 + 污点 + 依赖三路互补**  
+9 条 CWE 标注静态规则、跨过程污点追踪（源码级 + WALA IFDS 字节码级精确引擎）、离线 CVE 数据库（80 条，覆盖主流 Java 依赖）。发现记录走状态机确认流程，结合图遍历输出调用链影响面。完全离线，无需外部扫描服务。
 
 **多生态 SBOM，一条命令生成**  
 自动识别 Maven、Gradle、npm、pip，输出 CycloneDX JSON，直接衔接依赖漏洞扫描。
 
 **MCP 原生集成，直接接入 AI 工具**  
-独立 MCP stdio 服务（`repograph-mcp`），Claude Desktop、Cursor 等工具直接调用，无需中间层。
+独立 MCP stdio 服务（`repograph-mcp`），Cursor 等支持 MCP 协议的 AI 工具直接调用，无需中间层。
 
 ---
 
 ## 模块结构
 
-两个可独立部署的 JAR：
+三个 Gradle 子项目：
 
 ```
 repograph-app/   Spring Boot 服务 + Picocli CLI（REST API、索引管道、检索）
   ├─ core/        领域模型 + 接口定义（CodeUnit / VectorStore / GraphQueryService）
-  ├─ parser/      JavaParser AST、Tree-sitter FFM（C/Python）、启发式状态机
+  ├─ parser/      JavaParser AST、Tree-sitter FFM（C/Python）、Markdown 文档、启发式状态机
   ├─ graph/       Neo4j Bolt 门面（调用链 / 影响面 / 继承图）
   ├─ vector/      Qdrant gRPC（向量存储）+ Ollama（Embedding）
-  ├─ framework/   Spring / JAX-RS 注解识别，标记入口点
+  ├─ flow/        函数内 CFG / PDG / 数据流摘要 + 跨过程污点分析
+  ├─ retrieval/   GraphRAG 检索 + 安全感知重排序
+  ├─ framework/   Spring / JAX-RS / MyBatis 注解识别，标记入口点
   ├─ sbom/        Maven / Gradle / npm / pip → CycloneDX JSON
+  ├─ vuln/        漏洞扫描（代码规则 / 污点 / 依赖 CVE）+ 发现记录状态机
+  ├─ metrics/     圈复杂度 / 耦合 / 包循环 / Git 热点 / 健康报告
+  ├─ export/      包级依赖图导出（DOT / Mermaid）
   ├─ api/         Spring MVC REST 控制器
   └─ app/         Picocli CLI + 索引管道 + Spring Boot 入口
 
 repograph-mcp/   独立 MCP stdio 服务（供 AI 工具调用，通过 HTTP 转发至 repograph-app）
+
+repograph-taint-engine/   WALA IFDS 精确污点引擎（试验性模块，独立进程，JDK 21 运行）
+  字节码级 field-sensitive 污点分析；app 以子进程调用其 TaintScanCli（JSON I/O），
+  支撑 /api/v1/vulns/scan/taint/precise 精确扫描；详见模块内 README
 ```
 
 ---
@@ -147,7 +178,7 @@ repograph-mcp/   独立 MCP stdio 服务（供 AI 工具调用，通过 HTTP 转
 | **Qdrant** | `docker run -d -p 16333:6333 -p 16334:6334 qdrant/qdrant` |
 | **Neo4j** | `docker run -d -p 7474:7474 -p 7687:7687 -e NEO4J_AUTH=neo4j/neo4jneo4j neo4j:5` |
 | **Ollama** | 本机或远端启动，拉取模型 `ollama pull manutic/nomic-embed-code` |
-| **Java 22+** | 需开启 `--enable-preview --enable-native-access=ALL-UNNAMED` |
+| **JDK 25** | 需开启 `--enable-native-access=ALL-UNNAMED`（Tree-sitter FFM）；精确污点扫描另需一个带 jmods 的 JDK（如 JDK 21） |
 
 ---
 
@@ -174,8 +205,9 @@ repograph index ./repograph-app
 指标：Hit@1/3/5/10、MRR@10、HitScore。Hit@10 低于阈值（语义 65%，代码 75%）测试失败。
 
 产物：
-- `repograph-app/build/libs/repograph-app-0.1.0-SNAPSHOT.jar` — REST 服务 + CLI（命令：`repograph`）
+- `repograph-app/build/libs/repograph-app-0.5.0.jar` — REST 服务 + CLI（命令：`repograph`）
 - `repograph-mcp/build/libs/repograph-mcp-exec.jar` — MCP stdio 服务
+- `./gradlew :repograph-taint-engine:installDist` — 精确污点引擎（`build/install/repograph-taint-engine/`，供精确扫描子进程调用）
 
 ---
 
@@ -203,6 +235,12 @@ repograph:
       embed: 8
       upsert: 256
     default-strategy: AUTO
+  taint:
+    precise:                 # 精确污点扫描（WALA IFDS 引擎，独立进程）
+      enabled: false         # 配好 java-home 与 engine-lib-dir 后置 true
+      java-home: ""          # 带 jmods 的 JDK 主目录（如 JDK 21）
+      engine-lib-dir: ""     # repograph-taint-engine installDist 产物 lib 目录
+      timeout-seconds: 600
 ```
 
 ---
@@ -212,16 +250,16 @@ repograph:
 **1. 启动 REST 服务**
 
 ```bash
-java --enable-preview --enable-native-access=ALL-UNNAMED \
-  -jar repograph-app/build/libs/repograph-app-0.1.0-SNAPSHOT.jar serve
+java --enable-native-access=ALL-UNNAMED \
+  -jar repograph-app/build/libs/repograph-app-0.5.0.jar serve
 ```
 
 **2. 索引一个项目**
 
 ```bash
 # 通过 CLI（直接调用管道，无需 HTTP）
-java --enable-preview --enable-native-access=ALL-UNNAMED \
-  -jar repograph-app/build/libs/repograph-app-0.1.0-SNAPSHOT.jar \
+java --enable-native-access=ALL-UNNAMED \
+  -jar repograph-app/build/libs/repograph-app-0.5.0.jar \
   index /path/to/your/project
 
 # 通过 REST API（异步，返回 202）
@@ -259,6 +297,18 @@ repograph sbom <projectId>           生成 SBOM
 repograph delete <projectRoot>       删除项目索引
 repograph watch <projectRoot>        监听文件变更并增量更新
 repograph serve                      启动 REST 服务
+repograph complexity <projectId>     圈复杂度分析
+repograph coupling <projectId>       耦合（不稳定度）分析
+repograph cycles <projectId>         包循环依赖检测
+repograph hotspots <projectId>       Git 变更热点
+repograph deadcode <projectId>       死代码检测
+repograph testgap <projectId>        测试空白检测
+repograph report <projectId>         代码健康报告（六维度 + 健康分）
+repograph export <projectId>         包级依赖图导出（DOT / Mermaid）
+repograph vuln scan-code <projectId>              代码漏洞扫描
+repograph vuln scan-deps <projectId> <root>       依赖漏洞扫描
+repograph vuln list <projectId>                   列出发现记录
+repograph vuln report <projectId> [--out FILE]    生成漏洞报告
 ```
 
 常用选项（`index` 命令）：
@@ -290,19 +340,28 @@ repograph serve                      启动 REST 服务
 | `GET` | `/api/v1/graph/subtypes` | 查找子类与实现 |
 | `GET` | `/api/v1/graph/entrypoints` | 列出框架入口点 |
 | `GET` | `/api/v1/flow/analyze` | 按需生成方法级数据流摘要、CFG 与轻量 PDG |
+| `GET` | `/api/v1/flow/taint` | 跨过程污点追踪（source 方法 → Sink） |
+| `GET` | `/api/v1/metrics/complexity` | 圈复杂度排名 |
+| `GET` | `/api/v1/metrics/coupling` | 耦合（不稳定度）分析 |
+| `GET` | `/api/v1/metrics/cycles` | 包循环依赖检测 |
+| `GET` | `/api/v1/metrics/hotspots` | Git 变更热点 |
+| `GET` | `/api/v1/metrics/report` | 代码健康报告（六维度 + 健康分） |
+| `GET` | `/api/v1/export/graph` | 包级依赖图导出（DOT / Mermaid） |
 | `GET` | `/api/v1/projects` | 列出已索引项目 |
 | `GET` | `/api/v1/projects/{projectId}/stats` | 项目统计 |
 | `GET` | `/api/v1/frameworks/{projectId}` | 框架注解分析 |
 | `GET` | `/api/v1/sbom/{projectId}` | 生成 SBOM |
 | `GET` | `/api/v1/health` | 健康检查 |
 
+> 漏洞相关接口（`/api/v1/vulns/*`）见下方[漏洞管理](#漏洞管理)。
+
 ---
 
 ## MCP 服务（AI 工具集成）
 
-RepoGraph 提供 MCP stdio 服务，可接入 Claude Desktop、Cursor 等支持 MCP 协议的 AI 工具。
+RepoGraph 提供 MCP stdio 服务，可接入 Cursor 等任何支持 MCP 协议的 AI 工具。
 
-**Claude Desktop 配置**（`claude_desktop_config.json`）：
+**MCP 客户端配置示例**（`mcpServers` 格式）：
 
 ```json
 {
@@ -324,6 +383,7 @@ RepoGraph 提供 MCP stdio 服务，可接入 Claude Desktop、Cursor 等支持 
 |------|------|
 | `search_semantic` | 自然语言检索代码 |
 | `search_code` | 代码片段相似检索 |
+| `search_graphrag` | GraphRAG 检索（向量 + 调用图 + 影响面 + 安全重排序） |
 | `lookup_symbol` | 查看符号完整信息 |
 | `locate_at` | 文件行号 → 符号名 |
 | `find_callers` | 查询调用者（支持深度） |
@@ -331,6 +391,14 @@ RepoGraph 提供 MCP stdio 服务，可接入 Claude Desktop、Cursor 等支持 
 | `get_impact` | 修改影响面分析 |
 | `find_subtypes` | 查找子类与接口实现 |
 | `find_entrypoints` | 列出框架入口点 |
+| `analyze_flow` | 方法级数据流摘要 / CFG / PDG |
+| `trace_taint` | 跨过程污点追踪（source 方法 → Sink） |
+| `scan_vuln_code` | 触发代码漏洞扫描 |
+| `list_vulns` | 列出漏洞发现记录（支持过滤） |
+| `list_projects` | 列出已索引项目 |
+| `get_health_report` | 代码健康报告（六维度 + 健康分） |
+| `trigger_index` | 触发项目索引（异步） |
+| `index_status` | 查询索引进度 |
 
 ---
 
@@ -436,10 +504,21 @@ RepoGraph 提供 MCP stdio 服务，可接入 Claude Desktop、Cursor 等支持 
 
 ### 能力范围
 
+### 扫描路径
+
+四条互补扫描路径，均写入同一发现记录存储：
+
+| 扫描器 | 原理 | 速度 | 适用 |
+|--------|------|------|------|
+| 代码扫描 | 方法内字符串规则（9 条 CWE 规则：SQL/命令注入、XXE、弱加密、硬编码密钥、路径穿越、不安全反序列化、不安全随机数、敏感日志） | 快（秒级） | 快速普查，有误报 |
+| 污点扫描 | 跨过程污点追踪（HTTP 入口 → Sink，源码级启发式） | 慢（数十秒） | 多跳污点链 |
+| 精确污点扫描 | WALA IFDS 字节码级 field-sensitive（`repograph-taint-engine` 独立进程） | 慢 | 最精确；要求可编译产物 + 带 jmods 的 JDK |
+| 依赖扫描 | SBOM × 离线 CVE Advisory（80 条，覆盖主流 Java 依赖） | 快 | 依赖 CVE |
+
+### 其他能力
+
 | 子模块 | 说明 |
 |--------|------|
-| **代码漏洞扫描** | 9 条 CWE 标注规则：SQL/命令注入、XXE、弱加密、硬编码密钥、路径穿越、不安全反序列化、不安全随机数、敏感日志 |
-| **依赖漏洞扫描** | 离线 CVE 数据库（80 条，覆盖主流 Java 依赖），基于 SBOM 比对 |
 | **漏洞影响面分析** | 图遍历找出发现点的所有可达调用链 |
 | **发现状态管理** | 状态机 `SUSPECTED → CONFIRMED → FIXED / DISMISSED`，确认后计入报告 |
 | **漏洞报告** | JSON（REST）与 Markdown（CLI）双格式报告 |
@@ -448,12 +527,20 @@ RepoGraph 提供 MCP stdio 服务，可接入 Claude Desktop、Cursor 等支持 
 
 ```
 POST /api/v1/vulns/scan/code?projectId=          触发代码漏洞扫描（同步，秒级）
+POST /api/v1/vulns/scan/taint?projectId=         触发污点漏洞扫描（源码级启发式）
+POST /api/v1/vulns/scan/taint/precise?projectId=&classpath=&config=&rule=
+                                                 触发精确污点扫描（WALA IFDS 引擎）
 POST /api/v1/vulns/scan/deps?projectId=&projectRoot=  触发依赖漏洞扫描（基于 SBOM）
 GET  /api/v1/vulns?projectId=&severity=&status=  列出发现记录（支持过滤）
 PUT  /api/v1/vulns/{id}/status?status=           更新发现状态
 GET  /api/v1/vulns/{id}/impact                   查询单条漏洞的代码影响面
 GET  /api/v1/vulns/report/{projectId}            生成漏洞报告（JSON）
 ```
+
+**精确污点扫描前置条件**：默认关闭。需先 `./gradlew :repograph-taint-engine:installDist`，
+然后在 `repograph.taint.precise` 配置中填入带 jmods 的 JDK 路径（如 JDK 21）与引擎 lib 目录并置
+`enabled: true`。引擎以独立子进程运行，与 app 的 JDK 25 互不干扰；扫描结果以
+`ruleId=PRECISE_<rule>` 写入发现记录。
 
 ### CLI 命令
 
@@ -493,11 +580,21 @@ RepoGraph 的终极目标是：**让 LLM 以 Agent 身份在大型代码库中�
 
 [项目能力](#项目能力) 表格中的所有功能均已实现，可通过 Web 控制台、REST API 和 CLI 使用。
 
-### 第二阶段 — LLM Agent 集成
+### 第二阶段 — LLM Agent 集成（进行中）
+
+已完成：
 
 | 项目 | 说明 |
 |------|------|
-| `search_graphrag` MCP 工具 | 将四阶段 GraphRAG 管道（向量 → 调用图 → 影响面 → 重排序）暴露为 MCP 工具；当前仅 REST 可达 |
+| `search_graphrag` MCP 工具 ✓ | 四阶段 GraphRAG 管道（向量 → 调用图 → 影响面 → 重排序）已暴露为 MCP 工具 |
+| 安全 MCP 工具 ✓ | `trace_taint` / `list_vulns` / `scan_vuln_code` / `list_projects` |
+| Agent 定向工具 ✓ | `get_health_report` / `trigger_index` / `index_status`，Agent 可自主判断索引状态并触发 |
+| 精确污点引擎 ✓ | `repograph-taint-engine`（WALA IFDS）以独立进程接入，提供第四条扫描路径 |
+
+待开发：
+
+| 项目 | 说明 |
+|------|------|
 | MCP 工具结果加 `rawSource` | 现有工具只返回元数据；加入源码文本后 Agent 无需额外读文件即可理解方法实现 |
 | 跨子项目调用解析 | 改善 monorepo 内跨模块的调用边连接质量 |
 | 更多语言支持 | Go（`go.mod` SBOM；Tree-sitter 解析） |
@@ -511,3 +608,4 @@ RepoGraph 的终极目标是：**让 LLM 以 Agent 身份在大型代码库中�
 - 反射、动态代理调用无法静态追踪
 - C 预处理器宏展开不做，条件编译不按 build config 选择
 - C 函数指针调用无法精确解析
+- 精确污点扫描要求目标可编译（提供 classes/jar），且引擎须运行在带 jmods 的 JDK 上（JDK 17/21 可用，JDK 25 不含 jmods）
